--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hitman47",
+  "name": "Redemption",
   "description": "A WhatsApp Bot written in TypeScript using Baileys.",
   "keywords": [
     "bot",
