--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Dk",
+  "name": "Redemption",
   "version": "0.1.0",
   "description": "A WhatsApp bot written in TypeScript using Baileys",
-  "author": "Alι_Aryαɴ & Lucky Yambem",
+  "author": "Cartman",
   "main": "dist/bot.js",
   "keywords": [
     "bot",
