--- a/package.json
+++ b/package.json
@@ -1,77 +1,87 @@
 {
-  "name": "Redemption",
-  "version": "0.1.0",
-  "description": "A WhatsApp bot written in TypeScript using Baileys",
-  "author": "Cartman",
+  "name": "bible",
+  "version": "1.0.2",
   "main": "dist/bot.js",
-  "keywords": [
-    "bot",
-    "whatsapp",
-    "anime"
-  ],
-  "license": "AGPL-3.0",
+  "repository": "https://github.com/dark-worf/New-bot",
+  "author": "||•carter•|| <98878721+dark-worf@users.noreply.github.com>",
+  "license": "MIT",
+  "engines": {
+    "node": "20"
+  },
   "scripts": {
     "format": "prettier --write --config .prettierrc.json \"src/**/*.ts\"",
     "start": "node --max-old-space-size=4096 dist/bot.js",
     "build": "yarn rimraf dist/ && yarn tsc -p .",
     "postinstall": "yarn build"
   },
-  "bugs": {
-    "url": "https://github.com/AliAryanTech/Chisato-WhatsApp/issues"
-  },
-  "homepage": "https://github.com/AliAryanTech/Chisato-WhatsApp",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/AliAryanTech/Chisato-WhatsApp.git"
-  },
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
-    "@distube/ytdl-core": "^4.14.1",
     "@shineiichijo/canvas-chan": "^1.0.1",
-    "@shineiichijo/marika": "^2.0.6",
-    "@shineiichijo/nhentai-ts": "^1.0.0",
-    "@typegoose/typegoose": "^10.0.0",
-    "@whiskeysockets/baileys": "^7.0.0",
+    "@shineiichijo/marika": "2.0.6",
+    "@shineiichijo/nhentai-ts": "^1.0.5",
+    "@typegoose/typegoose": "^12.14.0",
     "anime-quiz": "^3.0.0",
-    "axios": "^1.7.3",
+    "axios": "^1.8.4",
+    "axios-cache-interceptor": "^1.7.0",
+    "baileys": "^6.7.18",
+    "better-sqlite3": "^8.4.0",
     "canvacord": "^5.4.8",
+    "canvas": "^2.11.2",
+    "cargo": "^0.8.0",
     "chalk": "4.1.1",
     "cheerio": "^1.0.0-rc.12",
     "chess-image-generator-ts": "^1.0.0",
     "chess-node": "^1.1.0",
-    "dotenv": "^16.0.3",
-    "emoji-regex": "^10.2.1",
+    "dotenv": "^16.0.0",
+    "emoji-regex": "^10.1.0",
     "events": "^3.3.0",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
-    "fs-extra": "^11.2.0",
-    "imgur": "^2.2.0",
+    "fs-extra": "^11.1.1",
+    "imgur": "^2.3.0",
     "link-preview-js": "^3.0.4",
-    "linkifyjs": "^4.0.2",
-    "moment-timezone": "^0.5.40",
-    "mongoose": "^6.7.0",
-    "node-cron": "^3.0.0",
+    "linkifyjs": "^4.1.0",
+    "mangadex-full-api": "^5.11.1",
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
+    "mongoose": "^8.13.2",
+    "node-cron": "^3.0.2",
+    "os": "^0.1.2",
     "path": "^0.12.7",
-    "pino": "^9.3.2",
+    "pdfkit": "^0.13.0",
+    "pino": "^7.11.0",
+    "pkmn-preview": "^1.2.0",
+    "pm2": "^5.2.2",
     "pokenode-ts": "^1.14.0",
     "prettier": "^3.3.3",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
+    "quick.db": "^9.1.6",
+    "shentai": "^2.0.4",
     "slot-machine": "^2.1.0",
-    "spotifydl-x": "^0.3.0",
+    "spotifydl-core": "^0.2.0",
+    "spotifydl-x": "^0.3.5",
     "telegraph-uploader": "^2.0.0",
+    "translate-google": "^1.5.0",
     "typed-emitter": "^2.1.0",
-    "wa-sticker-formatter": "^4.3.2"
+    "wa-sticker-formatter": "^4.3.2",
+    "welcomer-gif": "^2.0.1",
+    "wikipedia": "^2.1.1",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.15",
-    "@types/fs-extra": "^11.0.4",
+    "@types/express": "^4.17.17",
+    "@types/fs-extra": "^11.0.1",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "20.17.0",
     "@types/node-cron": "^3.0.1",
+    "@types/pdfkit": "^0.12.9",
     "@types/prettier": "^3.0.0",
     "@types/qr-image": "^3.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
-    "eslint": "^8.29.0",
-    "typescript": "^4.9.4"
+    "@types/qrcode-terminal": "^0.12.2",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
+    "typescript": "^4.6.4"
   }
 }
